# pb-cheatsheet

./: .gitignore  Cargo.toml  README.md  justfile
cheatsheets/: cheat-bash-basics.typ  cheat-git.typ  cheat-template.typ  cheat-vim-basics.typ
crates/com/: Cargo.toml  build.rs
crates/com/proto/: pb_cheatsheet.proto
crates/com/src/: grpc.rs  lib.rs
crates/host/: Cargo.toml
crates/host/src/: dbus.rs  imageprocessing.rs  main.rs
crates/pb-client/: Cargo.toml
crates/pb-client/src/: cheatsheets.rs  main.rs  wifi.rs
crates/testclient/: Cargo.toml
crates/testclient/src/: main.rs
utils/: app-receiver.app  app-sender.sh
