[workspace]
members = ["crates/host", "crates/testclient", "crates/pb-client", "crates/com"]
resolver = "2"

[workspace.package]
authors = ["Felix Zwettler"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/flxzt/pb-cheatsheet"
rust-version = "1.78"
version = "0.1.0"

[workspace.dependencies]
pb-cheatsheet-com = { path = "crates/com" }

anyhow = "1"
ashpd = "0.9.1"
async-trait = "0.1.81"
bincode = "1.3.3"
clap = { version = "4.5" }
const_format = "0.2.32"
embedded-graphics = "0.8.1"
image = "0.25"
inkview = { git = "https://github.com/simmsb/inkview-rs", rev = "ea3361c2bcee5c1ec28d5e4fb3d23d5b249102f3" }
inkview-eg = { git = "https://github.com/simmsb/inkview-rs", rev = "ea3361c2bcee5c1ec28d5e4fb3d23d5b249102f3" }
itertools = "0.13.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
prost = "0.13.1"
serde = "1"
serde_json = "1"
tokio = { version = "1" }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tonic = "0.12.1"
tonic-build = "0.12.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
zbus = "4.4.0"

[profile.release]
strip = true
# lto = 'fat'
