[package]
authors.workspace = true
build = "build.rs"
edition.workspace = true
license.workspace = true
name = "pb-cheatsheet-com"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
