[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "pb-cheatsheet-host"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pb-cheatsheet-com = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "full",
] } # TODO: only activate needed features
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zbus = { workspace = true }
ashpd = { workspace = true }
